fix: Adjust align on question mark image

--- a/src/app/features/multi-calc/pokemon-card/pokemon-card.component.scss
+++ b/src/app/features/multi-calc/pokemon-card/pokemon-card.component.scss
@@ -55,6 +55,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-left: -2em;
 }
 
 .middle {
