--- a/src/app/shared/pokemon-build/pokemon-build/pokemon-build.component.scss
+++ b/src/app/shared/pokemon-build/pokemon-build/pokemon-build.component.scss
@@ -22,6 +22,10 @@
   height: auto;
 }
 
+.question-image {
+  margin-bottom: 1.15em;
+}
+
 .status-item {
   display: flex;
   flex-direction: column;
